--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,5 +1,5 @@
 main {
-    height: 84vh;
+    height: 120vh;
     .hero {
       background-color: #f5f5f5;
       padding: 2rem;
@@ -13,6 +13,12 @@ main {
         font-size: 1.5rem;
         margin-bottom: 1.5rem;
       }
+      .img-home{
+        width: 25%;
+        margin-bottom: 30px;
+        border: solid;
+        border-radius: 4px;
+      }
       .button {
         display: inline-block;
         padding: 1rem 2rem;
@@ -25,6 +31,7 @@ main {
         &:hover {
           background-color: #71a0c3;
         }
+       
       }
     }
     .featured-products, .testimonials {
@@ -35,6 +42,24 @@ main {
         font-size: 2rem;
         margin-bottom: 1rem;
       }
+
     }
   }
+  @media (max-width: 768px) {
+    main {
+      height: auto;
+    }
+  
+    .hero {
+      h1 {
+        font-size: 2rem;
+      }
+      p {
+        font-size: 1.2rem;
+      }
+      .button {
+        font-size: 1rem;
+      }
+    }
+  }  
   
