--- a/src/pages/ProductFullInfo.scss
+++ b/src/pages/ProductFullInfo.scss
@@ -1,53 +1,57 @@
 
 .product-fullinfo-container {
+ 
+    
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    ;
-
+    height: 100vh;
     
-  }
+    
+}
   
-  .product-fullinfo-box {
+
+.product-fullinfo-box {
     background-color: white;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 16px;
+    padding: 40px;
     width: 40%;
     margin-top: 40px;
-    border: 3px solid #0b0b0b;
-   
-    
-  }
+    margin-bottom: 40px;
+    border: 5px solid #0b0b0b;
+    background-color: rgb(188, 175, 151) ;
+}
   
-  .name-product {
+.name-product {
     font-size: 24px;
     margin: 0;
     color: black;
-  }
+}
   
-  .product-img-info {
+.product-img-info {
     width: 100%;
     max-width: 400px;
     height: 300%;
     object-fit: cover;
     margin-top: 16px;
     margin-bottom: 16px;
-  }
+    border-radius: 10px;
+    border: solid 1px;
+   
+}
   
-  .price {
+.price {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 16px;
-  }
+}
   
-  .detail-info {
+.detail-info {
     margin: 0;
     text-align: center;
-  }
+}
   
